--- a/index.html
+++ b/index.html
@@ -3534,3 +3534,13 @@
     </script>
 </body>
 </html>
+
+            console.log('CivicHub Emergency Democracy Protection Platform Loaded');
+            console.log('All emergency numbers functional');
+            console.log('Translation system ready');
+            console.log('Print functionality enabled');
+            console.log('NEW: Elderly Rights & Housing Rights guides added');
+        });
+    </script>
+</body>
+</html>
