--- a/index.html
+++ b/index.html
@@ -1107,9 +1107,19 @@
                         </div>
                     </div>
                     
+                    <!-- Disability Rights -->
+                    <div class="bg-white dark:bg-gray-800 p-4 rounded-lg shadow">
+                        <h3 class="font-bold text-indigo-600 dark:text-indigo-400 mb-3">♿ Disability Rights</h3>
+                        <div class="space-y-2 text-sm">
+                            <button onclick="generateDisabilityRightsGuide()" class="w-full text-left hover:bg-gray-50 dark:hover:bg-gray-700 p-2 rounded">→ Complete Rights Guide</button>
+                            <a href="tel:+18002144494" class="block w-full text-left hover:bg-gray-50 dark:hover:bg-gray-700 p-2 rounded">→ Disability Rights Hotline</a>
+                            <button onclick="disabilityAdvocacy()" class="w-full text-left hover:bg-gray-50 dark:hover:bg-gray-700 p-2 rounded">→ Legal Advocacy Help</button>
+                        </div>
+                    </div>
+                    
                     <!-- Print Guides -->
                     <div class="bg-white dark:bg-gray-800 p-4 rounded-lg shadow">
-                        <h3 class="font-bold text-indigo-600 dark:text-indigo-400 mb-3">🖨️ Print Guides</h3>
+                        <h3 class="font-bold text-slate-600 dark:text-slate-400 mb-3">🖨️ Print Guides</h3>
                         <div class="space-y-2 text-sm">
                             <button onclick="printCompleteGuide()" class="w-full text-left hover:bg-gray-50 dark:hover:bg-gray-700 p-2 rounded">→ Complete Guide</button>
                             <button onclick="generateRightsCard()" class="w-full text-left hover:bg-gray-50 dark:hover:bg-gray-700 p-2 rounded">→ Rights Card</button>
@@ -5370,6 +5380,7 @@
     </script>
 </body>
 </html>
+
 
 
 
